--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,13 @@
 html {
   overflow-y: scroll;
+  margin: 0;
+  padding: 0;
 }
 
 body {
   margin: 0;
-  padding-top: 67px;
+  padding: 0;
+  height: 100vh;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
