Trying to add underlines

--- a/src/custom.scss
+++ b/src/custom.scss
@@ -2,13 +2,21 @@ $primary: #ec6d19;
 $danger: #f44336;
 $info: #1a2b35;
 $dark: #1a181f;
-$light: #e5eff0;
+$dark-subtle: #231f2b;
+$light: #f0ebe5;
+$light-subtle: #f0eae5;
 $secondary: #d5d1db;
 $success: #80a544;
 $warning: #b1079a;
 //$body: ;
 $body-bg: $light;
 $body-color: $info;
+
+//$font-family-base: -apple-system, BlinkMacSystemFont, “Segoe UI”, “Roboto”,
+//  “Oxygen”, “Ubuntu”, “Cantarell”, “Fira Sans”, “Droid Sans”, “Helvetica Neue”,
+//  sans-serif;
+//$font-size-base
+//$line-height-base
 
 $link-decoration: none;
 
