--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,5 @@
+@import "./custom.scss";
+
 html {
   overflow-y: scroll;
   margin: 0;
@@ -18,4 +20,24 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+.nav-link::before {
+  transition: all 0.2s;
+  content: "";
+  height: 7px;
+  width: 100%;
+  position: absolute;
+  background-color: $info;
+  left: 0;
+  bottom: 0;
+  opacity: 0;
+}
+
+.nav-link:hover::before {
+  opacity: 1;
+}
+
+.hightlight-dark:hover {
+  background-color: #231f2b;
 }
