Home page, Backgrounds, Categories

--- a/src/custom.scss
+++ b/src/custom.scss
@@ -7,7 +7,7 @@ $light: #f0ebe5;
 $light-subtle: #f0eae5;
 $secondary: #d5d1db;
 $success: #80a544;
-$warning: #b1079a;
+$warning: #d841c4;
 //$body: ;
 $body-bg: $light;
 $body-color: $info;
