Active link, width, dropdown-highlight

--- a/src/custom.scss
+++ b/src/custom.scss
@@ -1,13 +1,14 @@
 $primary: #ec7f19;
 $danger: #f44336;
 $info: #1a2b35;
+$info-subtle: #16242c;
 $dark: #1a181f;
-$dark-subtle: #231f2b;
+$dark-subtle: #24212c;
 $light: #f0ebe5;
 $light-subtle: #f0eae5;
 $secondary: #d5d1db;
 $success: #80a544;
-$warning: #d841c4;
+$warning: #d134af;
 //$body: ;
 $body-bg: $light;
 $body-color: $info;
