--- a/src/custom.scss
+++ b/src/custom.scss
@@ -8,7 +8,8 @@ $light: #f0ebe5;
 $light-subtle: #f0eae5;
 $secondary: #d5d1db;
 $success: #80a544;
-$warning: #d134af;
+$warning: #be06a0;
+$warning-subtle: #c41aa7;
 //$body: ;
 $body-bg: $light;
 $body-color: $info;
