color changes, crumbtrail fix, navbar line, videos

--- a/src/custom.scss
+++ b/src/custom.scss
@@ -3,9 +3,9 @@ $danger: #f44336;
 $info: #1a2b35;
 $info-subtle: #16242c;
 $dark: #1a181f;
-$dark-subtle: #24212c;
-$light: #f0ebe5;
-$light-subtle: #f0eae5;
+$dark-border-subtle: #24212c;
+$light: #fff4e6;
+$light-subtle: #eccbb0;
 $secondary: #d5d1db;
 $success: #80a544;
 $warning: #be06a0;
